wdl-ast/tests/validation/duplicate-struct-name/source.errors
error: conflicting struct name `Foo`
   ┌─ tests/validation/duplicate-struct-name/source.wdl:15:8
   │
 7 │ struct Foo {
   │        --- first struct with this name is here
   ·
15 │ struct Foo {
   │        ^^^ this conflicts with a previous struct of the same name

error: conflicting struct name `Bar`
   ┌─ tests/validation/duplicate-struct-name/source.wdl:19:8
   │
11 │ struct Bar {
   │        --- first struct with this name is here
   ·
19 │ struct Bar {
   │        ^^^ this conflicts with a previous struct of the same name

error: conflicting struct name `Baz`
   ┌─ tests/validation/duplicate-struct-name/source.wdl:23:8
   │
 5 │ import "foo" alias Foo as Baz
   │                           --- first struct with this name is here
   ·
23 │ struct Baz {
   │        ^^^ this conflicts with a previous struct of the same name

error: conflicting struct name `Foo`
   ┌─ tests/validation/duplicate-struct-name/source.wdl:27:27
   │
 7 │ struct Foo {
   │        --- first struct with this name is here
   ·
27 │ import "Bar" alias Baz as Foo
   │                           ^^^ this conflicts with a previous struct of the same name

